--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.App .fromDiv{
+  display: grid;
+  padding: 100px 350px;
+  background-color: rgb(29, 22, 53);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App .fromDiv .fromLable{
+  color: rgb(245, 201, 8);
+}
+.App .fromDiv .btn{
+  margin: 10px;
+}
+.App .fromDiv .btn .cnlBtn{
+  /* margin-right:  17%; */
+  background-color: rgb(136, 213, 236);
+  color: aliceblue;
+  border: none;
+  border-radius: 4px;
+  height: 30px;
+  width: 60px;
+  margin-right: 24px;
+}
+.App .fromDiv .btn .cnlBtn:hover{
+ cursor: pointer;
+ background-color: azure;
+ color:rgb(136, 213, 236) ;
+}
+.App .fromDiv .btn .addBtn{
+  background-color: rgb(17, 172, 94);
+  color: aliceblue;
+  border: none;
+  border-radius: 4px;
+  height: 30px;
+  width: 60px;
+  margin-left: 24px;
+}
+.App .fromDiv .btn .addBtn:hover{
+  cursor: pointer;
+  background-color: aliceblue;
+  color: rgb(17, 172, 94);
 }
